TAG:  qcreports_db-mpr-14
DATE: 03/29/2005
STAFF: lec
RELEASE: A
CHANGES: MPR

TAG:  qcreports_db-mpr-13
TAG:  qcreports_db-mpr-12
TAG:  qcreports_db-mpr-11
TAG:  qcreports_db-mpr-10
DATE: 03/28/2005
STAFF: lec
RELEASE: A
CHANGES: MPR

TAG:  qcreports_db-mpr-9
DATE: 03/23/2005
STAFF: lec
RELEASE: A
CHANGES: MPR

TAG:  qcreports_db-mpr-8
TAG:  qcreports_db-mpr-7
TAG:  qcreports_db-mpr-6
TAG:  qcreports_db-mpr-5
DATE: 03/22/2005
STAFF: lec
RELEASE: A
CHANGES: MPR

TAG:  qcreports_db-mpr-4
TAG:  qcreports_db-mpr-3
TAG:  qcreports_db-mpr-2
TAG:  qcreports_db-mpr-1
DATE: 03/16/2005
STAFF: lec
RELEASE: A
CHANGES: MPR

TAG:  qcreports_db-mpr-BP
DATE: 03/16/2005
STAFF: lec
RELEASE: A
CHANGES: branch point tag for MPR

TAG:  qcreports_db-3-1-1-15
DATE: 03/10/2005
STAFF: lec
RELEASE: A
CHANGES: added link to TBASE

TAG:  qcreports_db-3-1-1-14
DATE: 03/09/2005
STAFF: lec
RELEASE: A
CHANGES: TR 6647, qcr.html

TAG:  qcreports_db-3-1-1-13
DATE: 02/22/2005
STAFF: sc
RELEASE: A
CHANGES: qcr.html - corrected sequence loads links, removed lucy load

TAG:  qcreports_db-3-1-1-12
DATE: 02/18/2005
STAFF: lec
RELEASE: A
CHANGES:
a) MRK_NoGO.py fix url

TAG:  qcreports_db-3-1-1-11
DATE: 02/18/2005
STAFF: dbm
RELEASE: A
CHANGES:
a) MGC release

TAG:  qcreports_db-3-1-1-10
TAG:  qcreports_db-3-1-1-9
DATE: 02/15/2005
STAFF: lec
RELEASE: A
CHANGES:
a) SEQ_MarkerAnnotation.sql
b) ACC_Accession.sql

TAG:  qcreports_db-3-1-1-8
DATE: 02/09/2005
STAFF: lec
RELEASE: A
CHANGES:
a) TR 6440 (GXD_Stats.py)
b) TR 6547 (nomenclature reports)
c) TR 6551 (GO reports)

TAG:  qcreports_db-3-1-1-7
TAG:  qcreports_db-3-1-1-6
DATE: 02/03/2005
STAFF: lec
RELEASE: A
CHANGES:
a) TR 6440 (GXD_Stats.py)
b) TR 6547 (nomenclature reports)
c) TR 6551 (GO reports)

TAG:  qcreports_db-3-1-1-5
TAG:  qcreports_db-3-1-1-4
DATE: 02/01/2005
STAFF: lec
RELEASE: A
CHANGES:
a) MGI 3.11 merge

TAG:  qcreports_db-3-1-1-3
DATE: 01/31/2005
STAFF: lec
RELEASE: A
CHANGES:
a) MGI 3.11 merge

TAG:  qcreports_db-3-1-1-2